Add support for config imports and cascading config.